adding neighbor info to strand accounts

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -112,6 +112,7 @@
 			<td class='twofish b-r'> TwoFish <br> (%) </td>
 			<td class='clustered b-r'> Clustered <br> (%)  </td>
 			<td class='db-fullimage b-r'> Full <br>images (%) </td>
+			<td class='neighbor b-r'> Neighbor <br> (%) </td>
 			<td class='last-uploaded-timestamp b-r'> Last Upload </td>
 			<td class='last-updated-timestamp'> Last updated </td>			
 		</tr>
@@ -125,7 +126,8 @@
 			<td class='db-thumbnails right percent b-r' title='{{ entry.thumbsCount }}'> {{ entry.thumbs }} </td>
 			<td class='twofish right percent b-r'>{{ entry.twofish }} </td>
 			<td class='clustered right percent b-r' title='{{ entry.clusteredCount }}'> {{ entry.clustered }} </td>
-			<td class='db-fullimage right b-r' title='{{ entry.fullimagesCount }}'> {{ entry.fullimages }} </td>	
+			<td class='db-fullimage right b-r' title='{{ entry.fullimagesCount }}'> {{ entry.fullimages }} </td>
+			<td class='neighbor b-r'> {{ entry.neighbor }} </td>	
 			<td class='last-uploaded-timestamp timeago b-r' title="{{ entry.lastUploadTime }}"> </td>
 			<td class='last-updated-timestamp timeago' title="{{ entry.lastUpdatedTime }}"> </td>			
 		</tr>
